--- a/package.json
+++ b/package.json
@@ -9,15 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.10.0",
+    "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.13.4",
+    "bcryptjs": "^3.0.3",
+    "cookie": "^1.1.1",
+    "formik": "^2.4.6",
+    "mongodb": "^6.19.0",
+    "mongoose": "^8.17.0",
+    "next": "15.3.1",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.1"
+    "react-icons": "^5.5.0",
+    "react-outside-click-handler": "^1.3.0",
+    "react-redux": "^9.2.0",
+    "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
+    "slick-carousel": "^1.8.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "@types/node": "24.2.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
   }
 }
