--- a/package.json
+++ b/package.json
@@ -17,12 +17,11 @@
     "formik": "^2.4.6",
     "mongodb": "^6.19.0",
     "mongoose": "^8.17.0",
-    "next": "15.3.1",
+    "next": "^16.1.6",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-outside-click-handler": "^1.3.0",
     "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
