--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "formik": "^2.4.6",
     "mongodb": "^6.19.0",
     "mongoose": "^8.17.0",
-    "next": "^16.1.6",
+    "next": "15.1.9",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
